Velocity icon left align issue

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/main/_icons.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/main/_icons.scss
@@ -1,6 +1,6 @@
 .velocity-icon {
-    width: 60px;
-    height: 55px;
+    width: 48px;
+    height: 48px;
     display: inline-block;
     background-size: cover;
     background-image: url("../images/Icon-Velocity.svg");
